# kfp-analyze

./: .gitignore  README.md  pyproject.toml
kfp_analyze/: cli.py  flat_output_parse.py  ingestion.py  kfp_util.py  models.py
kfp_analyze/samples/components/: __init__.py
kfp_analyze/samples/pipelines/: __init__.py  complex_timed.py  simple_returns.py  single_no_op.py
notebooks/dev/: kfp_client_test.ipynb  misc_pipeline_execution.ipynb  staging.ipynb
